<resources>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_your_mail">Confirm your mail</string>
    <string name="we_have_sent_you_a_confirmation_code">We have sent you a confirmation code</string>
    <string name="code">Code</string>
    <string name="send_code">Send code</string>
    <string name="not_received_the_code_we_can_resend_it">Not received the code? We can resend it!</string>
    <string name="confirm">Confirm</string>
    <string name="you_can">You can </string>
    <string name="skip"><u>skip</u></string>
    <string name="the_confirmation_but_then"> the confirmation, but then</string>
    <string name="your_cards_will_be_limited">your Cards will be limited</string>
    <string name="set_up_your_cards_account">Set up your Cards account</string>
    <string name="terms_and_conditions"> <a href="https://yandex.ru">Terms and conditions</a></string>

    <string name="body_footer_condition_and_terms">
        By creating an account, you accept our\n
        <b><a href="https://www.yandex.ru/">Terms and Conditions</a></b>
        you read our
        <b><a href="https://www.yandex.ru/">Privacy Policy</a></b>
    </string>
</resources>