<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_100"
    tools:context=".ConfirmFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/glAuthBlock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="24dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/ic_logo"
                android:tint="@color/primary_700" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="@font/inter_extra_bold"
                android:gravity="center"
                android:letterSpacing="-0.05"
                android:text="@string/app_name"
                android:textColor="@color/primary_700"
                android:textSize="32sp"
                app:lineHeight="16sp" />
        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_your_mail"
            android:textAppearance="@style/TextAppearance.Pasha.HeadlineMedium" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:text="@string/we_have_sent_you_a_confirmation_code"
            android:textAppearance="@style/TextAppearance.Pasha.BodyMedium.Regular"
            android:textColor="@color/primary_600" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glAuthBlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        app:layout_constraintBottom_toTopOf="@id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/glAuthBlock">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.Pasha.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="custom">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/code"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.Pasha.Button.TextButton"
                    android:layout_width="96dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|end"
                    android:paddingRight="16dp"
                    android:text="@string/send_code"
                    android:textAppearance="@style/TextAppearance.Pasha.BodyMedium.Regular"
                    android:textColor="@color/primary_500" />
            </FrameLayout>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/not_received_the_code_we_can_resend_it"
                android:textAppearance="@style/TextAppearance.Pasha.BodyMedium.Regular"
                android:textColor="@color/primary_500" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Pasha.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/confirm" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_can"
                android:textAppearance="@style/TextAppearance.Pasha.BodyMedium.Regular"
                android:textColor="@color/primary_600"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.Pasha.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="4dp"
                android:paddingVertical="0dp"
                android:text="@string/skip"
                android:textAppearance="@style/TextAppearance.Pasha.LinkMedium" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/the_confirmation_but_then"
                android:textAppearance="@style/TextAppearance.Pasha.BodyMedium.Regular"
                android:textColor="@color/primary_600"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_cards_will_be_limited"
            android:textAppearance="@style/TextAppearance.Pasha.BodyMedium.Regular"
            android:textColor="@color/primary_600" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>